[gd_scene load_steps=25 format=3 uid="uid://dwg0y8fm3r2yf"]

[ext_resource type="Script" path="res://scenes/enemies/slime_boss/scripts/slime_boss.gd" id="1_apyi5"]
[ext_resource type="Texture2D" uid="uid://dwrydodncwtdd" path="res://assets/sprites/slime_purple.png" id="1_lplxo"]
[ext_resource type="PackedScene" uid="uid://waxbmutk2wdy" path="res://scenes/health_bar.tscn" id="2_chnv3"]
[ext_resource type="Script" path="res://scenes/enemies/slime_boss/scripts/state_machine.gd" id="4_3xm8a"]
[ext_resource type="AudioStream" uid="uid://ba2nr6ecuxg4s" path="res://assets/sounds/hurt.wav" id="4_j0ymc"]
[ext_resource type="Script" path="res://scenes/enemies/slime_boss/scripts/wandering_state.gd" id="5_2dwbg"]
[ext_resource type="Script" path="res://scenes/enemies/slime_boss/scripts/jump_attack_state.gd" id="6_epfvy"]
[ext_resource type="Script" path="res://scenes/enemies/slime_boss/scripts/dying_state.gd" id="6_olnxb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3f3fm"]
radius = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4v3m2"]
atlas = ExtResource("1_lplxo")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7a56"]
atlas = ExtResource("1_lplxo")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c87lh"]
atlas = ExtResource("1_lplxo")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjrsj"]
atlas = ExtResource("1_lplxo")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yagua"]
atlas = ExtResource("1_lplxo")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_idxfg"]
atlas = ExtResource("1_lplxo")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2ais"]
atlas = ExtResource("1_lplxo")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayrjo"]
atlas = ExtResource("1_lplxo")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip2tf"]
atlas = ExtResource("1_lplxo")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d2os"]
atlas = ExtResource("1_lplxo")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eln3b"]
atlas = ExtResource("1_lplxo")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_535d7"]
atlas = ExtResource("1_lplxo")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_h5y1f"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_4v3m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7a56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c87lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjrsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yagua")
}],
"loop": false,
"name": &"die",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idxfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ais")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayrjo")
}],
"loop": false,
"name": &"jump_preparation",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip2tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d2os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eln3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_535d7")
}],
"loop": true,
"name": &"wander",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivs4b"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0envl"]
radius = 18.0

[node name="SlimeBoss" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_apyi5")

[node name="HealthBar" parent="." instance=ExtResource("2_chnv3")]
z_index = 3
anchors_preset = 0
offset_left = -12.0
offset_top = -14.0
offset_right = 52.0
offset_bottom = -6.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.369998, 0.369998)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 18)
shape = SubResource("CircleShape2D_3f3fm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_h5y1f")
animation = &"jump_preparation"

[node name="Hurtbox" type="Area2D" parent="." groups=["Enemy Hurtbox"]]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 18)
shape = SubResource("CircleShape2D_ivs4b")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemy Hitbox"]]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 18)
shape = SubResource("CircleShape2D_0envl")

[node name="SlimeBossStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_3xm8a")
initial_state = NodePath("Wandering")

[node name="Wandering" type="Node" parent="SlimeBossStateMachine" node_paths=PackedStringArray("slime", "animated_sprite")]
script = ExtResource("5_2dwbg")
slime = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="JumpAttack" type="Node" parent="SlimeBossStateMachine" node_paths=PackedStringArray("slime", "animated_sprite")]
script = ExtResource("6_epfvy")
slime = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Dying" type="Node" parent="SlimeBossStateMachine" node_paths=PackedStringArray("animated_sprite", "slime")]
script = ExtResource("6_olnxb")
animated_sprite = NodePath("../../AnimatedSprite2D")
slime = NodePath("../..")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 18)
target_position = Vector2(-24, 0)
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 18)
target_position = Vector2(24, 0)
collision_mask = 2

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_j0ymc")

[node name="LookPlayerRaycasts" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="LookPlayerRaycasts"]
position = Vector2(0, 29)
target_position = Vector2(-100, 0)

[node name="Right" type="RayCast2D" parent="LookPlayerRaycasts"]
position = Vector2(0, 29)
target_position = Vector2(100, 0)

[connection signal="animation_finished" from="AnimatedSprite2D" to="SlimeBossStateMachine/JumpAttack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="SlimeBossStateMachine/Dying" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
